# aws-ieeg-recon

./: .gitignore  README.md  pyproject.toml  requirements.txt
code/: file_paths.csv  ieeg_recon.py  reconIEEG.m  utilities.py
